# markdownbridge

./: .gitignore  AGENTS.md  pyproject.toml
markdownbridge/: __init__.py  ast_nodes.py  cli.py  parser.py  registry.py
markdownbridge/converters/: base.py  confluence.py  confluence_adf.py  jira.py  slack.py  teams.py
markdownbridge/reverse/: jira_to_md.py
tests/: conftest.py  test_cli.py  test_confluence.py  test_confluence_adf.py  test_jira.py  test_parser.py  test_registry.py  test_reverse_jira.py  test_slack.py  test_teams.py
